Fix contact page content overflow

--- a/src/pages/contact/index.module.styl
+++ b/src/pages/contact/index.module.styl
@@ -136,3 +136,6 @@
     :global(.container)
       align-items: stretch
       padding-top: 40px
+
+    section
+      min-width: unset
